deploy: b61393288341a31fd2a0ea657f0bdb66e40d221f

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ writing style I admire.</p>
 worth breaking down into bite-sized pieces. By sharing my journey, I hope to
 make it more accessible for you too.</p>
 <h2 id="how-to-read"><a class="header" href="#how-to-read">How to read</a></h2>
-<p>I've organized related concpets together, but I'm not your dad - feel free to
-jump around and focus on whatever interests you most.</p>
+<p>I've organized related concpets together, but it shouldn't puzzle you much if
+you jump around and focus on whatever interests you most.</p>
 <p>I love reading with a dark color theme. You can change themes by clicking the
 paint brush icon (<i class="fa fa-paint-brush"></i>) in the top-left menu bar.</p>
 <p>Need to find something specific? Press the search icon (<i class="fa
@@ -259,6 +259,11 @@ doesn’t compile.</p>
             window.playground_copyable = true;
         </script>
 
+        <script src="ace.js"></script>
+        <script src="editor.js"></script>
+        <script src="mode-rust.js"></script>
+        <script src="theme-dawn.js"></script>
+        <script src="theme-tomorrow_night.js"></script>
 
         <script src="elasticlunr.min.js"></script>
         <script src="mark.min.js"></script>
