--- a/print.html
+++ b/print.html
@@ -176,8 +176,8 @@ writing style I admire.</p>
 worth breaking down into bite-sized pieces. By sharing my journey, I hope to
 make it more accessible for you too.</p>
 <h2 id="how-to-read"><a class="header" href="#how-to-read">How to read</a></h2>
-<p>I've organized related concpets together, but I'm not your dad - feel free to
-jump around and focus on whatever interests you most.</p>
+<p>I've organized related concpets together, but it shouldn't puzzle you much if
+you jump around and focus on whatever interests you most.</p>
 <p>I love reading with a dark color theme. You can change themes by clicking the
 paint brush icon (<i class="fa fa-paint-brush"></i>) in the top-left menu bar.</p>
 <p>Need to find something specific? Press the search icon (<i class="fa
@@ -315,22 +315,21 @@ provide great references when programming in other languages.</p>
 <p>Let's briefly explore some standard library traits to understand their practical
 use.</p>
 <ul>
+<li>Debug</li>
+<li>Display</li>
+<li>Default</li>
 <li>Clone</li>
 <li>Copy</li>
-<li>Display</li>
-<li>Debug</li>
-<li>Default</li>
+<li>From/Into</li>
 <li>Eq and PartialEq</li>
 <li>Ord and PartialOrd</li>
-<li>Iterator</li>
-<li>IntoIterator</li>
-<li>From/Into</li>
 </ul>
 <p>These traits enable a rich set of tools that work seamlessly across many types.
 Let’s look at a few examples to illustrate their usefulness.</p>
 <h2 id="debug"><a class="header" href="#debug">Debug</a></h2>
-<p>Sometimes, especially when troubleshooting, we want to quickly inspect the
-contents of a variable, such as the <code>origin</code> instance of <code>Point</code> below.</p>
+<p>When we build a custom struct, like the <code>Point</code> below, we'd often like to
+display the content to the users. If we <code>println!</code> as below, it doesn't work.
+Click the "run" button in the code below and see what the compiler tells.</p>
 <pre><pre class="playground"><code class="language-rust does_not_compile">struct Point {
     x: i32,
     y: i32,
@@ -338,10 +337,93 @@ contents of a variable, such as the <code>origin</code> instance of <code>Point<
 
 fn main() {
     let origin = Point { x: 0, y: 0 };
-    println!("{:?}", origin); // not work
+    println!("{}", origin); // not work
 }</code></pre></pre>
-<p>The <code>Debug</code> trait enables this by allowing types to be
+<p>The compiler error implies that the <code>Point</code> needs to implement <code>std::fmt::Display</code> in
+order for the line <code>println!("{}", origin)</code> to execute. We will discuss
+<code>Display</code> trait in a minute. Now, we'd like to check the more common trait
+<code>Debug</code>.</p>
+<p>The <code>Debug</code> trait enables us to inspect the content by by allowing types to be
 printed using the <code>{:?}</code> formatter in macros like <code>println!</code>.</p>
+<pre><pre class="playground"><code class="language-rust">#[derive(Debug)]
+struct Point {
+    x: i32,
+    y: i32,
+}
+
+fn main() {
+    let origin = Point { x: 0, y: 0 };
+    println!("{:?}", origin); // Output: Point { x: 0, y: 0 }</code></pre></pre>
+<p>As shown in the 1st line, the easist way to implement Debug trait is to derive
+it explicitly with <code>#[derive(Debug)]</code>, and then <code>{:?}</code> works now!</p>
+<h2 id="display"><a class="header" href="#display">Display</a></h2>
+<p>Now it's <code>Display</code>. Unlike Debug, the Display trait is for user-facing output.
+Implementing it requires us to define how the type should look when printed.</p>
+<pre><pre class="playground"><code class="language-rust">use std::fmt;
+
+struct Point {
+    x: i32,
+    y: i32,
+}
+
+impl fmt::Display for Point {
+    fn fmt(&amp;self, f: &amp;mut fmt::Formatter) -&gt; fmt::Result {
+        write!(f, "({}, {})", self.x, self.y)
+    }
+}
+
+fn main() {
+    let p = Point { x: 3, y: 4 };
+    println!("{}", p); // Output: (3, 4)
+}
+</code></pre></pre>
+<p>You might have noticed that there is no <code>#[derive(Display)]</code> here. This is
+because Rust’s standard library doesn’t provide such a macro, but there are
+external crate like <a href="https://crates.io/crates/derive_more">derive_more</a> to get
+this functionality.</p>
+<p>Speaking of <code>Debug</code> v.s. <code>Display</code>, if the type is meant to be readable by
+users, implement <code>Display</code>. If it’s for developers, implement <code>Debug</code>. We can do
+both.</p>
+<h2 id="default"><a class="header" href="#default">Default</a></h2>
+<p>The Default trait defines what it means to create a "default" value of a type.
+It is often used when initializing structures with default configurations.</p>
+<pre><pre class="playground"><code class="language-rust">#[derive(Debug,Default)]
+struct Config {
+    debug_mode: bool,
+    max_connections: u32,
+}
+
+fn main() {
+    let config = Config::default(); // All fields set to their default values
+    println!("{:?}", config); // Let's print the content out
+}</code></pre></pre>
+<p>If you run the code above, the result is <code>Config { debug_mode: false, max_connections: 0 }</code>.</p>
+<p>Let's take a close look at the above code.</p>
+<p>We have derived <code>Debug</code> in
+order to prinln with <code>{:?}</code>. And we have also derived <code>Default</code>. Rust
+allows us to derive <code>Default</code> because both of the two fields (<code>bool</code> and <code>u32</code>)
+have implemented <code>Default</code> trait, with values <em>false</em> and <em>0</em> respectively.</p>
+<p>Be aware that many Rust types do not implement Default. It is
+only implemented when it makes sense to define a "reasonable default value". For
+example, <code>std::fs::File</code>. Opening or creating a file requires a path — no
+default makes sense.</p>
+<pre><pre class="playground"><code class="language-rust does_not_compile">use std::fs::File;
+
+#[derive(Debug, Default)]
+struct Config {
+    debug_mode: bool,
+    max_connections: u32,
+    file: File, // compiler complains here
+}
+
+fn main() {
+    let config = Config::default();
+    println!("{:?}", config);
+}</code></pre></pre>
+<h2 id="clone-and-copy"><a class="header" href="#clone-and-copy">Clone and Copy</a></h2>
+<h2 id="frominto"><a class="header" href="#frominto">From/Into</a></h2>
+<h2 id="eq-and-partialeq"><a class="header" href="#eq-and-partialeq">Eq and PartialEq</a></h2>
+<h2 id="ord-and-partialord"><a class="header" href="#ord-and-partialord">Ord and PartialOrd</a></h2>
 
                     </main>
 
@@ -367,6 +449,11 @@ printed using the <code>{:?}</code> formatter in macros like <code>println!</cod
             window.playground_copyable = true;
         </script>
 
+        <script src="ace.js"></script>
+        <script src="editor.js"></script>
+        <script src="mode-rust.js"></script>
+        <script src="theme-dawn.js"></script>
+        <script src="theme-tomorrow_night.js"></script>
 
         <script src="elasticlunr.min.js"></script>
         <script src="mark.min.js"></script>
