deploy: 589f65f26fdbfe267d68ef43427eb283785c39bb

--- a/toc.html
+++ b/toc.html
@@ -28,6 +28,6 @@
         <link rel="stylesheet" href="ferris.css">
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="trait.html" target="_parent"><strong aria-hidden="true">2.</strong> Trait</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="trait-common-traits.html" target="_parent"><strong aria-hidden="true">2.1.</strong> Common traits</a></li></ol></li></ol>
+        <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="trait.html" target="_parent"><strong aria-hidden="true">2.</strong> Trait</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="trait-common-traits.html" target="_parent"><strong aria-hidden="true">2.1.</strong> Common traits</a></li></ol></li><li class="chapter-item expanded "><a href="workspace.html" target="_parent"><strong aria-hidden="true">3.</strong> Cargo Workspace</a></li></ol>
     </body>
 </html>
