--- a/workspace.html
+++ b/workspace.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Rust &amp; Beyond: A Practical Exploration</title>
-        <meta name="robots" content="noindex">
+        <title>Cargo Workspace - Rust &amp; Beyond: A Practical Exploration</title>
 
 
         <!-- Custom HTML head -->
@@ -160,257 +159,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Hi there, I'm <a href="http://xixiao.info">Xi Xiao</a>. This is my journey learning
-<a href="https://www.rust-lang.org/">Rust</a>.</p>
-<h2 id="how-to-read"><a class="header" href="#how-to-read">How to read</a></h2>
-<p>I've organized related concpets together, but it shouldn't puzzle you much if
-you jump around and focus on whatever interests you most.</p>
-<p>I love reading with a dark color theme. You can change themes by clicking the
-paint brush icon (<i class="fa fa-paint-brush"></i>) in the top-left menu bar.</p>
-<p>Need to find something specific? Press the search icon (<i class="fa
-fa-search"></i>) or hit the <code>S</code> key on the keyboard to open an input box. As you
-type, matching content appears instantly.</p>
-<h2 id="code-blocks"><a class="header" href="#code-blocks">Code blocks</a></h2>
-<p>Code blocks may contain icons for interacting purpose:</p>
-<div class="table-wrapper"><table><thead><tr><th>Icon</th><th>Description</th></tr></thead><tbody>
-<tr><td><i class="fa fa-copy"></i></td><td>Copy the code</td></tr>
-<tr><td><i class="fa fa-play"></i></td><td>Execute and display the output</td></tr>
-<tr><td><i class="fa fa-eye"></i></td><td>Toggle visibility of hidden lines</td></tr>
-<tr><td><i class="fa fa-history"></i></td><td>For editable code blocks, this undos changes you have made</td></tr>
-</tbody></table>
-</div><br/>
-<br/>
-Here are examples.
-<ol>
-<li>A block that you can copy the code, or execute and see the output:</li>
-</ol>
-<pre><pre class="playground"><code class="language-rust">fn main() {
-    println!("Hello, I'm the non-editable code block!");
-}</code></pre></pre>
-<ol start="2">
-<li>A code block that you can also edit and undo:</li>
-</ol>
-<pre><pre class="playground"><code class="language-rust  editable">fn main() {
-    println!("Click on me and edit!");
-}</code></pre></pre>
-<ol start="3">
-<li>A code block with a hidden line:</li>
-</ol>
-<pre><pre class="playground"><code class="language-rust">fn main() {
-    println!("I have a hidden line, find it out!");
-<span class="boring">    // a hidden comment line here
-</span>}</code></pre></pre>
-<br/>
-<p><span id="ferris"></span></p>
-<p>In the sample code, Ferris will also help you distinguish code with different
-context:</p>
-<div class="table-wrapper"><table><thead><tr><th>Ferris</th><th>Meaning</th></tr></thead><tbody>
-<tr><td><img src="img/ferris/does_not_compile.svg" class="ferris-explain" alt="Ferris with a question mark"/></td><td>This code does not compile!</td></tr>
-<tr><td><img src="img/ferris/panics.svg" class="ferris-explain" alt="Ferris throwing up their hands"/></td><td>This code panics!</td></tr>
-<tr><td><img src="img/ferris/not_desired_behavior.svg" class="ferris-explain" alt="Ferris with one claw up, shrugging"/></td><td>This code does not produce the desired behavior.</td></tr>
-</tbody></table>
-</div>
-<h2 id="source-code"><a class="header" href="#source-code">Source Code</a></h2>
-<p>The source files from which this book is generated can be found on
-<a href="https://github.com/xixiaofinland/rust_beyond">GitHub</a>.</p>
-<p>That said, let's get on with it!</p>
-<div style="break-before: page; page-break-before: always;"></div><h2 id="traits"><a class="header" href="#traits">Traits</a></h2>
-<p>Types in Rust are powerful and versatile. Traits define shared behavior that
-multiple types can implement.</p>
-<h3 id="default-implementations"><a class="header" href="#default-implementations">Default implementations</a></h3>
-<p>Traits in Rust are similar to interfaces in other languages but can also provide
-default implementations for methods.</p>
-<p>Typically, an interface defines method signatures without any implementation. In
-Rust, however, you can supply default method implementations directly within a
-trait.</p>
-<blockquote>
-<p>Hover over the code below and click " <i class="fa fa-play"></i> " to execute
-and see the result.</p>
-</blockquote>
-<pre><pre class="playground"><code class="language-rust">trait Greet {
-    fn greet(&amp;self) { // Default implementation
-        println!("Hello from the default greeting!");
-    }
-}
-
-struct Person;
-
-impl Greet for Person {} // Uses the default implementation
-
-fn main() {
-    let person = Person;
-    person.greet(); // Outputs: Hello from the default greeting!
-}</code></pre></pre>
-<p>We can, of course, override this default behavior like so:</p>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">trait Greet {
-</span><span class="boring">    fn greet(&amp;self) {
-</span><span class="boring">        println!("Hello from the default greeting!");
-</span><span class="boring">    }
-</span><span class="boring">}
-</span><span class="boring">
-</span><span class="boring">struct Person;
-</span>// --snip--
-
-impl Greet for Person {
-    fn greet(&amp;self) { // Overwrite the default implementation
-        println!("Hello from Person greeting!");
-    }
-}
-
-fn main() {
-    let person = Person;
-    person.greet();  // Outputs: Hello from Person greeting!
-}</code></pre></pre>
-<h3 id="traits-as-function-parameters-and-return-types"><a class="header" href="#traits-as-function-parameters-and-return-types">Traits as Function Parameters and Return Types</a></h3>
-<p>Once the Greet trait is defined, it can be used as a type for function
-parameters and return values:</p>
-<pre><pre class="playground"><code class="language-rust">fn main() {
-    let person = Person;
-    do_greet(person);
-
-    let returned = return_greet();
-    returned.greet();
-}
-
-fn do_greet(greetable: impl Greet) { // Accepts any type implementing Greet
-    greetable.greet();
-}
-
-fn return_greet() -&gt; impl Greet { // Returns some type implementing Greet
-    Person
-}
-
-// --snip--
-<span class="boring">struct Person;
-</span><span class="boring">
-</span><span class="boring">impl Greet for Person {}
-</span><span class="boring">
-</span><span class="boring">trait Greet {
-</span><span class="boring">    fn greet(&amp;self) {
-</span><span class="boring">        println!("Hello, greeting!");
-</span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre></pre>
-<p>When reading more and more Rust code, we see that experienced Rust developers
-frequently use standard library traits. Rust provides common traits as both
-guidelines and best practices. This not only helps us learn Rust but also
-provide great references when programming in other languages.</p>
-<p>In the following section, let's have a look at the out-of-box common traits!</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="common-traits"><a class="header" href="#common-traits">Common Traits</a></h1>
-<p>Let's briefly explore some standard library traits to understand their practical
-use.</p>
-<ul>
-<li>Debug</li>
-<li>Display</li>
-<li>Default</li>
-<li>Clone</li>
-<li>Copy</li>
-<li>From/Into</li>
-<li>Eq and PartialEq</li>
-<li>Ord and PartialOrd</li>
-</ul>
-<p>These traits enable a rich set of tools that work seamlessly across many types.
-Let’s look at a few examples to illustrate their usefulness.</p>
-<h2 id="debug"><a class="header" href="#debug">Debug</a></h2>
-<p>When we build a custom struct, like the <code>Point</code> below, we'd often like to
-display the content to the users. If we <code>println!</code> as below, it doesn't work.
-Click the "run" button in the code below and see what the compiler tells.</p>
-<pre><pre class="playground"><code class="language-rust does_not_compile">struct Point {
-    x: i32,
-    y: i32,
-}
-
-fn main() {
-    let origin = Point { x: 0, y: 0 };
-    println!("{}", origin); // not work
-}</code></pre></pre>
-<p>The compiler error implies that the <code>Point</code> needs to implement <code>std::fmt::Display</code> in
-order for the line <code>println!("{}", origin)</code> to execute. We will discuss
-<code>Display</code> trait in a minute. Now, we'd like to check the more common trait
-<code>Debug</code>.</p>
-<p>The <code>Debug</code> trait enables us to inspect the content by by allowing types to be
-printed using the <code>{:?}</code> formatter in macros like <code>println!</code>.</p>
-<pre><pre class="playground"><code class="language-rust">#[derive(Debug)]
-struct Point {
-    x: i32,
-    y: i32,
-}
-
-fn main() {
-    let origin = Point { x: 0, y: 0 };
-    println!("{:?}", origin); // Output: Point { x: 0, y: 0 }</code></pre></pre>
-<p>As shown in the 1st line, the easist way to implement Debug trait is to derive
-it explicitly with <code>#[derive(Debug)]</code>, and then <code>{:?}</code> works now!</p>
-<h2 id="display"><a class="header" href="#display">Display</a></h2>
-<p>Now it's <code>Display</code>. Unlike Debug, the Display trait is for user-facing output.
-Implementing it requires us to define how the type should look when printed.</p>
-<pre><pre class="playground"><code class="language-rust">use std::fmt;
-
-struct Point {
-    x: i32,
-    y: i32,
-}
-
-impl fmt::Display for Point {
-    fn fmt(&amp;self, f: &amp;mut fmt::Formatter) -&gt; fmt::Result {
-        write!(f, "({}, {})", self.x, self.y)
-    }
-}
-
-fn main() {
-    let p = Point { x: 3, y: 4 };
-    println!("{}", p); // Output: (3, 4)
-}
-</code></pre></pre>
-<p>You might have noticed that there is no <code>#[derive(Display)]</code> here. This is
-because Rust’s standard library doesn’t provide such a macro, but there are
-external crate like <a href="https://crates.io/crates/derive_more">derive_more</a> to get
-this functionality.</p>
-<p>Speaking of <code>Debug</code> v.s. <code>Display</code>, if the type is meant to be readable by
-users, implement <code>Display</code>. If it’s for developers, implement <code>Debug</code>. We can do
-both.</p>
-<h2 id="default"><a class="header" href="#default">Default</a></h2>
-<p>The Default trait defines what it means to create a "default" value of a type.
-It is often used when initializing structures with default configurations.</p>
-<pre><pre class="playground"><code class="language-rust">#[derive(Debug,Default)]
-struct Config {
-    debug_mode: bool,
-    max_connections: u32,
-}
-
-fn main() {
-    let config = Config::default(); // All fields set to their default values
-    println!("{:?}", config); // Let's print the content out
-}</code></pre></pre>
-<p>If you run the code above, the result is <code>Config { debug_mode: false, max_connections: 0 }</code>.</p>
-<p>Let's take a close look at the above code.</p>
-<p>We have derived <code>Debug</code> in
-order to prinln with <code>{:?}</code>. And we have also derived <code>Default</code>. Rust
-allows us to derive <code>Default</code> because both of the two fields (<code>bool</code> and <code>u32</code>)
-have implemented <code>Default</code> trait, with values <em>false</em> and <em>0</em> respectively.</p>
-<p>Be aware that many Rust types do not implement Default. It is
-only implemented when it makes sense to define a "reasonable default value". For
-example, <code>std::fs::File</code>. Opening or creating a file requires a path — no
-default makes sense.</p>
-<pre><pre class="playground"><code class="language-rust does_not_compile">use std::fs::File;
-
-#[derive(Debug, Default)]
-struct Config {
-    debug_mode: bool,
-    max_connections: u32,
-    file: File, // compiler complains here
-}
-
-fn main() {
-    let config = Config::default();
-    println!("{:?}", config);
-}</code></pre></pre>
-<h2 id="clone-and-copy"><a class="header" href="#clone-and-copy">Clone and Copy</a></h2>
-<h2 id="frominto"><a class="header" href="#frominto">From/Into</a></h2>
-<h2 id="eq-and-partialeq"><a class="header" href="#eq-and-partialeq">Eq and PartialEq</a></h2>
-<h2 id="ord-and-partialord"><a class="header" href="#ord-and-partialord">Ord and PartialOrd</a></h2>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="single-project-to-workspace"><a class="header" href="#single-project-to-workspace">Single Project to Workspace</a></h1>
+                        <h1 id="single-project-to-workspace"><a class="header" href="#single-project-to-workspace">Single Project to Workspace</a></h1>
 <p>As you build projects in Rust, it's natural to start simple: a binary
 (src/main.rs) or a library (src/lib.rs) sitting neatly in a single Cargo
 project. But as your ideas grow, your project can benefit from a little more
@@ -529,6 +278,9 @@ I have transferred it into workspace style to prepare for growing :)!</p>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="trait-common-traits.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
 
                         <div style="clear: both"></div>
@@ -537,6 +289,9 @@ I have transferred it into workspace style to prepare for growing :)!</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="trait-common-traits.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
             </nav>
 
@@ -566,11 +321,6 @@ I have transferred it into workspace style to prepare for growing :)!</p>
         <!-- Custom JS scripts -->
         <script src="ferris.js"></script>
 
-        <script>
-        window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
-        });
-        </script>
 
     </div>
     </body>
